[tool.poetry]
name = "athena"
version = "0.1.0"
description = "An API to communicate with GPT models with contextual knowledge of the uploaded documents"
authors = ["wolf-hash <karansingh8777@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
pydantic = "^1.10.8"
openai = "^0.27.7"
azure-search-documents = "^11.3.0"
azure-identity = "^1.13.0"
langchain = "^0.0.189"
azure-storage-blob = "^12.16.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
start = 'athena.main:start'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
